--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "airtable-node": "^0.1.20",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
+    "framer-motion": "^4.0.3",
     "netlify": "^6.1.14",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-highlight-words": "^0.17.0",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.4.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
     "uuid": "^8.3.2",
