--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "netlify": "^6.1.14",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-ga": "^3.3.0",
     "react-highlight-words": "^0.17.0",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
