--- a/netlify.toml
+++ b/netlify.toml
@@ -3,17 +3,8 @@
  publish = '/build'
  functions = './functions'
 
-[[redirects]]
- from = '/api/*'
- to = '/.netlify/functions/:splat'
- status = 200
 
 [[redirects]]
- from = '/*'
- to = '/index.html'
- status = 200
-
-[[redirects]]
- from = 'pages/success'
- to = '/'
+ from = "/api/*"
+ to = "/.netlify/functions/:splat"
  status = 200
