--- a/netlify.toml
+++ b/netlify.toml
@@ -14,3 +14,8 @@
  from = '/*'
  to = '/index.html'
  status = 200
+ 
+[[redirects]]
+  from = "/docs/routing/redirections"
+  to = "/docs/routing/redirects"
+  status = 301
