testing netlify branch dep.

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,14 +10,9 @@
  status = 200
 
 
+
+
 [[redirects]]
- from = '/*'
+ from = '../*'
  to = '/index.html'
  status = 200
-
-
-
-[[redirects]]
-  from = '/test/*'
-  to = '/test'
-  status = 200
