--- a/netlify.toml
+++ b/netlify.toml
@@ -9,13 +9,18 @@
  to = "/.netlify/functions/:splat"
  status = 200
 
+ //  redirecting to home page
 [[redirects]]
   from = "/project"
   to = "/"
+ status = 200
+//  redirecting to projects api
+[[redirects]]
+  from = "/projects"
+  to = "/api/projects"
+ status = 200
 
-
-
-
+ 
 [[redirects]]
   from = "/*"
   to = "/index.html"
