--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,4 @@
+
 [build]
  command = 'npm run build'
  publish = '/build'
@@ -9,3 +10,9 @@
  to = "/.netlify/functions/:splat"
  status = 200
 
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+  force = false
